Revise biography and add news updates
Updated the biography and added news items.

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ button:visited {
 
 	<h2>About Me</h2>
 		<div  align="justify">
-    Arif Ahmed is a Researcher in BioAI lab located in UiT The Arctic University of Norway. Previously he was an Assistant Professor at the School of Computer Science and Engineering, XIM University, Bhubaneswar, India (2021-2024). Before that, he was Post-doctoral Research Fellow in the Department of Physics and Technology at the UiT The Arctic University of Norway, TromsØ, Norway (2019-2021). From 2009 to 2019, he was an Assistant Professor of Computer Application at Haldia Institute of Technology, India. He holds an invited position as a Research Consultant in the Imaging Media Research Centre at the Korea Institute of Science and Technology (KIST), Korea, and in the School of Electrical Sciences at IIT Bhubaneswar, India.
+    Arif Ahmed is a Researcher in BioAI lab located in UiT The Arctic University of Norway. Previously, he was an Assistant Professor at the School of Computer Science and Engineering, XIM University, Bhubaneswar, India (2021-2024). Before that, he was Post-doctoral Research Fellow in the Department of Physics and Technology at the UiT The Arctic University of Norway, TromsØ, Norway (2019-2021). From 2009 to 2019, he was an Assistant Professor of Computer Application at Haldia Institute of Technology, India. He holds an invited position as a Research Consultant in the Imaging Media Research Centre at the Korea Institute of Science and Technology (KIST), Korea, and in the School of Electrical Sciences at IIT Bhubaneswar, India.
 <br/>
 			Arif completed his Ph.D. at the National Institute of Technology Durgapur, India, and his undergraduate studies at Burdwan University. His research interests lie in the area of Computer Vision and Artificial Intelligence, ranging from theory to design to implementation. He has collaborated actively with researchers in several other disciplines of computer science, physics, and biology, particularly computer vision applications on problems in the multi-disciplinary environment.
 He is a Senior Member of IEEE and Digital Life Norway (DLN).
@@ -282,7 +282,11 @@ He is a Senior Member of IEEE and Digital Life Norway (DLN).
 <h2>News</h2>
 	
 	<ul>
-	
+
+	<li>Feb'26,<font color="red"><b> Session Organizer!!! </b> </font>  <a href="https://www.bioailab.org/indaiaisummit2026" target="_blank"> 2026, India AI Summit 2026</a>, 17th Feb, New Delhi, India </li>
+
+	<li>Feb'26,<font color="red"><b> Workshop Organizer!!! </b> </font>  <a href="https://www.bioailab.org/ai4fertility" target="_blank"> The First Workshop on AI in Fertility Science </a>, 18 April 2026, UiT, Tromsø, Norway </li>
+
 	<li>Jan'26,<font color="red"><b> Book Published !!! </b> </font>  <a href="https://www.worldscientific.com/worldscibooks/10.1142/14159?srsltid=AfmBOor24cuYVJDisTqGQLdYApwN7y7WeeB9MOcHV_E7wjeYmll7vVsI#t=aboutBook" target="_blank"> Gender and Diversity Policy in AI </a> </li>
 
   
